--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+  <link rel="stylesheet" href="styles.css">
   <header class="site-header">
     <h1>CSS Basics Lab</h1>
     <p class="tagline">Practice common properties, text & fonts, box model, flexbox, and positioning.</p>
